adicionadas novas funcoes
